# CybEngine

./: .gitignore  CMakeLists.txt  CybEngine.sln  CybEngine.vcxproj  CybEngine.vcxproj.filters  LICENSE  TODO.txt  debuglog - kopia.txt  debuglog.txt  index.html  make_build.bat  make_clean.bat  params.json
assets/: Street environment_V01.mtl
assets/shaders/: blinn-phong-bump.frag  blinn-phong-bump.vert  blinn-phong.frag  blinn-phong.vert  cook-torrance.frag  cook-torrance.vert  debug-normals.frag  debug-normals.geom  debug-normals.vert  debug-normals_fs.glsl  debug-normals_gs.glsl  skybox.frag  skybox.vert  standard.frag  standard.vert  standard_fs.glsl  standard_vs.glsl
core/: CMakeLists.txt  config.h  handles.h  interface.h  logger.cpp  logger.h  memory.cpp  memory.h
examples/: CMakeLists.txt
examples/01-test/: CMakeLists.txt  main.cpp
lib/Debug/x64/: glew32d.exp  glew32sd.lib  glfw3.lib
lib/Release/x64/: glew32.exp  glew32s.lib  glfw3.lib
renderer/: CMakeLists.txt  command.cpp  command.h  driver_gl.cpp  driver_gl.h  frontend.cpp  frontend.h  renderer.cpp  renderer.h  vertex_layout.cpp  vertex_layout.h
src/: Precompiled.cpp  Precompiled.h  main.cpp  stdafx.h
src/Base/: Algorithm.h  Debug.cpp  Debug.h  File.cpp  File.h  FileUtils.cpp  FileUtils.h  Macros.h  Memory.h  MurmurHash.h  ParallelJobQueue.cpp  ParallelJobQueue.h  Profiler.cpp  Profiler.h  StringUtils.h  Sys.h  SysInfo.cpp  SysInfo.h  Sys_Win32.cpp  Timer.cpp  Timer.h
src/Base/Container/: InsertionOrderedMap.h  LinkedList.h
src/Base/Math/: Vector.h
src/GUI/: imgui.cpp  imgui_draw.cpp
src/Game/: Camera.cpp  Camera.h  Entry.cpp  Entry.h  GameApp.cpp  GameApp.h  SkyBox.cpp  SkyBox.h
src/core/: FileUtils.cpp  FileUtils.h  Log.cpp  Log.h  Macros.h  MurmurHash.h  Timer.cpp  Timer.h
src/core/containers/: TempArray.h
src/engine/: Model.cpp  Model.h  Model_obj.cpp  Model_obj.h  stb_image.h
src/renderer/: Backend.cpp  Backend.h  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  Definitions.h  Image.cpp  Image.h  InputLayout.cpp  InputLayout.h  Model.cpp  Model.h  Model_Obj2.h  Model_obj.cpp  Model_obj.h  PipelineState.cpp  PipelineState.h  RenderDevice.cpp  RenderDevice.h  RenderDeviceOpenGL.cpp  RenderDeviceOpenGL.h  RenderDevice_GL.cpp  RenderDevice_GL.h  Shader.cpp  Shader.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  stb_image.h  stb_image_resize.h
utils/: CMakeLists.txt  Hash.h  allocator.h  intrusive_list.h  timer.cpp  timer.h
